<?xml version="1.0"?>
<package format="2">
  <name>base_action</name>
  <version>0.0.0</version>
  <description>Entry behavior Reinforcement learnings with SAC</description>
  <maintainer email="remnantplume@gmail.com">Morrison</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
